# IP-Chat

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  copilot-instructions.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  run-ip-chat.sh  tsconfig.json
.claude/: settings.local.json
.github/workflows/: ci.yml  release-fallback.yml  release-simple.yml  release.yml  update-deps.yml
scripts/: check-setup.sh  release.sh
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  entitlements.macos.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: chat.rs  connection_manager.rs  discovery.rs  error.rs  file_transfer.rs  lib.rs  main.rs  models.rs
src/components/: ChatPanel.tsx  ConversationList.tsx  FileTransferPanel.tsx  PeerList.tsx  SettingsPanel.tsx  WelcomeScreen.tsx
src/stores/: chatStore.ts  fileTransferStore.ts  index.ts  settingsStore.ts  userStore.ts
src/styles/: global.css
src/types/: index.ts
src/utils/: index.ts
